// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`storyshots components/ui/InputURL default 1`] = `
<div
  style="height: 100%;"
>
  <span
    class="p-input-icon-right"
  >
    <input
      appendto="body"
      class="p-inputtext p-component"
      type="url"
    />
     
    <i
      class="pi pi-external-link"
      style="display: none;"
    />
  </span>
</div>
`;

exports[`storyshots components/ui/InputURL with a valid url 1`] = `
<div
  style="height: 100%;"
>
  <span
    class="p-input-icon-right"
  >
    <input
      appendto="body"
      class="p-inputtext p-component p-filled"
      type="url"
    />
     
    <i
      class="pi pi-external-link"
      style="display: none;"
    />
  </span>
</div>
`;

exports[`storyshots components/ui/InputURL with an invalid url 1`] = `
<div
  style="height: 100%;"
>
  <span
    class="p-input-icon-right"
  >
    <input
      appendto="body"
      class="p-inputtext p-component p-filled"
      type="url"
    />
     
    <i
      class="pi pi-external-link"
      style="display: none;"
    />
  </span>
</div>
`;
